--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "styled": "^1.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
